# XREngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
Assets/test/: utah-teapot.mtl
Dependencies/: glad.c  imgui_demo.cpp  stb_image.h
Shaders/: Basic.frag  Basic.vert  CMakeLists.txt  Entity.frag  Entity.vert  vulkan.vert
Source/: CMakeLists.txt  UnitTest.h
Source/App/: CMakeLists.txt  DxrApplication.cpp  DxrApplication.h  LogManager.h  main.cpp
Source/App/Common/: Entity.cpp  Entity.h  Utils.h
Source/App/Common/Light/: LightDirectional.cpp  LightDirectional.h  LightPoint.cpp  LightPoint.h
Source/App/Common/Model/: Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Scene.cpp  Scene.h  Texture.cpp
Source/App/UI/: EmbeddedUI.cpp  EmbeddedUI.h  IGUI.h
Source/ECS/: CMakeLists.txt  ECS.cpp  ECS.h
Source/ECS/Components/: Camera.cpp  Camera.h  EntityKernel.cpp  EntityKernel.h  Gravity.h  RigidBody.h  Transform.h
Source/ECS/Components/Light/: DirectionalLight.h  PointLight.h  SpotLight.h
Source/ECS/Core/: Command.h  ComponentManager.h  Ecs.h  EntityManager.h  Event.h  EventManager.h  System.h  SystemManager.h  World.h
Source/ECS/Core/Containers/: DenseMap.h  SparseSet.h
Source/ECS/Systems/: CameraControlSystem.cpp  CameraControlSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  PlayerControlSystem.cpp  PlayerControlSystem.h
Source/Engine/Components/: CMakeLists.txt  Camera.cpp  Camera.h  Components.h  Transform.h
Source/Engine/Core/: CMakeLists.txt  InputSystem.h  glError.h
Source/Engine/OpenGL/: Application.cpp  Application.h  CMakeLists.txt  InputSystem.cpp  Material.h  Mesh.h  Shader.cpp  Shader.h  Texture.h  Window.cpp  Window.h  glError.cpp
Source/Engine/OpenGL/Common/: Camera.cpp  Camera.h  Utils.h
Source/Engine/OpenGL/Common/Light/: LightDirectional.cpp  LightDirectional.h  LightPoint.cpp  LightPoint.h  LightSpot.cpp  LightSpot.h
Source/Engine/OpenGL/Model/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Texture.cpp  Texture.h
Source/Engine/Vulkan/: Application.cpp  Application.h  CMakeLists.txt  Device.cpp  Device.h  Mesh.cpp  Mesh.h  Pipeline.cpp  Pipeline.h  SwapChain.cpp  SwapChain.h  Window.cpp  Window.h
Source/Engine/Vulkan/shader/: shader.vert  simple_shader.vert
Source/Resources/: CMakeLists.txt  Stopwatch.cpp  Stopwatch.h  Timer.cpp  Timer.h
Source/Resources/Interface/: IGuiInterface.h
